--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
+  margin: 0;
 }
 
 .container {
